# seamless-glance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  codecov.yml  install.ps1  install.sh  package-lock.json  package.json
.changeset/: README.md  automated-releases.md  bounded-concurrent-describes.md  classify-access-denied-by-code.md  concurrent-service-fetches.md  consolidate-region-aggregation.md  core-logic-test-coverage.md  cost-cache-keyed-by-profile-region.md  cost-explorer-unavailable-state.md  dlqs-are-not-missing-dlqs.md  ecs-real-capacity-and-status.md  enforce-key-scope.md  finding-cost-estimates.md  findings-no-stale-cross-context-data.md  global-fetches-honor-profile.md  graceful-sts-ecs-errors.md  in-ui-notification-surface.md  in-view-row-filter.md  inventory-cache-ttl.md  key-registry-single-source.md  list-fetchers-surface-status.md  no-out-of-bounds-selection.md  non-blocking-refresh.md  paginate-all-list-fetchers.md  per-resource-findings.md  persist-global-region-selection.md  region-discovery-failure-visible.md  remove-numeric-nav-gate-modal-keys.md  resource-tags-on-service-models.md  sdk-retry-and-timeouts.md  service-registry-for-row-actions.md  shared-list-table-helper.md  small-cleanups.md  swap-aws-profiles.md  tags-for-services-needing-extra-calls.md  truncation-and-empty-states.md  validate-persisted-config.md
.github/workflows/: ci.yml  pr-star-check.yml  release.yml  version.yml
docs/: architecture.md  aws-service-roadmap.md  development.md  findings-roadmap.md  navigation-strategy.md
scripts/: release-helper.sh  sync-cargo-version.sh  tag-release.sh
src/: config.rs  main.rs
src/app/: app.rs  findings.rs  mod.rs  refresh.rs  services.rs
src/aws/: account.rs  apigateway.rs  clients.rs  cloudwatch.rs  cost.rs  ec2.rs  ecs.rs  elb.rs  elbv2.rs  lambda.rs  mod.rs  pricing.rs  profiles.rs  rds.rs  regions.rs  secrets.rs  security_group.rs  service.rs  sqs.rs  tags.rs  target_group.rs  vpc.rs
src/cache/: cost.rs  mod.rs  pricing.rs
src/license/: ensure_license.rs  load.rs  mod.rs  public_key.rs  status.rs  verify.rs
src/models/: account_overview.rs  apigateway.rs  apigatway.rs  cloudwatch.rs  cost.rs  cost_estimate.rs  describable.rs  ec2.rs  ecs.rs  elb.rs  finding.rs  lambda.rs  mod.rs  rds.rs  secrets.rs  security_group.rs  service.rs  service_status.rs  sqs.rs  tags.rs  target_group.rs  vpc.rs
src/resources/: mod.rs  region_aggregate.rs  ssh.rs
src/ui/: footer.rs  header.rs  keys.rs  mod.rs  notification.rs  open.rs  terminal.rs  theme.rs  ui.rs
src/ui/overlay/: confirm.rs  describe.rs  help.rs  mod.rs  overlays.rs  render.rs  scroll.rs  select_profile.rs  select_ssh_key.rs
src/ui/views/: account_overview.rs  apigateway.rs  cloudwatch.rs  command.rs  cost_overview.rs  cost_savings.rs  ec2.rs  ecs.rs  findings.rs  help.rs  lambda.rs  list_table.rs  load_balancers.rs  mod.rs  rds.rs  secrets.rs  security_groups.rs  sqs.rs  status.rs  target_groups.rs  vpc.rs
