[package]
name = "seamless-glance"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]

[profile.release-linux]
inherits = "release"
lto = "thin"
codegen-units = 2

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.27"
crossterm = "0.27"
anyhow = "1"

aws-config = { version = "1.8.10", default-features = false, features = ["rustls"] }
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
aws-sdk-ecs = "1"
aws-sdk-costexplorer = "1"
aws-sdk-budgets = "1"
aws-sdk-sts = "1"
aws-sdk-rds = "1"
aws-smithy-observability = { version = "0.1", default-features = false }

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-elasticloadbalancingv2 = "1.104.0"
serde_json = "1.0.148"
dirs = "6.0.0"
aws-sdk-lambda = "1.112.0"
aws-sdk-apigatewayv2 = "1.94.0"
aws-sdk-apigateway = "1.96.0"
aws-sdk-sqs = "1.91.0"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
pem = "3.0.6"
rand = "0.9.2"
aws-sdk-cloudwatch = "1.100.0"
aws-sdk-secretsmanager = "1.97.0"
async-trait = "0.1.89"
futures = "0.3.32"
aws-types = "1.3.13"
