[package]
name = "seamless-glance"
version = "1.1.0"
edition = "2021"
description = "Fast, read-only AWS TUI for cloud infrastructure visibility and triage"
license = "GPL-3.0-only"
repository = "https://github.com/fells-code/seamless-glance"
homepage = "https://github.com/fells-code/seamless-glance"
readme = "README.md"
keywords = ["aws", "tui", "devops", "cloud", "sre"]
categories = ["command-line-utilities"]

# Lets `cargo binstall seamless-glance` fetch the prebuilt release binary
# instead of compiling from source. Binaries are published as raw files named
# seamless-glance-<version>-<target>(.exe) on the GitHub Release.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]

[profile.release-linux]
inherits = "release"
lto = "thin"
codegen-units = 2

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.27"
crossterm = "0.27"
anyhow = "1"

aws-config = { version = "1.8.10", default-features = false, features = ["rustls"] }
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
aws-sdk-ecs = "1"
aws-sdk-costexplorer = "1"
aws-sdk-budgets = "1"
aws-sdk-sts = "1"
aws-sdk-rds = "1"
aws-smithy-observability = { version = "0.1", default-features = false }
aws-smithy-types = "1"

serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-elasticloadbalancingv2 = "1.104.0"
serde_json = "1.0.148"
dirs = "6.0.0"
aws-sdk-lambda = "1.112.0"
aws-sdk-apigatewayv2 = "1.94.0"
aws-sdk-apigateway = "1.96.0"
aws-sdk-sqs = "1.91.0"
aws-sdk-cloudwatch = "1.100.0"
aws-sdk-secretsmanager = "1.97.0"
async-trait = "0.1.89"
futures = "0.3.32"
aws-types = "1.3.13"
